bloonix-webgui (0.18) released at 2014-12-23

    * Show the company name in the form of the company settings.
    * Count services per company is not sortable.
    * nagios-command is replaced with simple-command.

bloonix-webgui (0.17) released at 2014-12-10

    * Added new column data_retention to table host.
      This column is automatically added if the webgui is
      restarted.

bloonix-webgui (0.16) released at 2014-12-05

    * Fixed bloonix repo documentation.
    * Add the clone service button to the global service list.

bloonix-webgui (0.15) released at 2014-12-04

    * Fixed host list offset and limit for template groups.

bloonix-webgui (0.14) released at 2014-12-03

    * Fixed parsing nagios argument list.
    * Fixed html injection in the wtrm command list.
    * Fixed the wtrm function checkUrl.

bloonix-webgui (0.13) released at 2014-12-03

    * Added config parameter allow_simple_username, which allows
      simple usernames like "joe" instead of email addresses.

bloonix-webgui (0.12) released at 2014-12-01

    * Fixed "undefined is not a function".

bloonix-webgui (0.11) released at 2014-11-30

    * Services can be cloned now to the same or other hosts.
    * Changed the icon to clone templates.
    * Changed the icon to clone dashboards.

bloonix-webgui (0.10) released at 2014-11-26

    * Fixed WTRM error messages if the WTRM feature is not
      available. Now only a small info box is shown.

bloonix-webgui (0.9) released at 2014-11-25

    * Fixed js error 'fillkey is not defined'.
    * Admins can now see only contacts, contactgroups and
      timeperiods from they own company.

bloonix-webgui (0.8) released at 2014-11-23

    * New doc: how does bloonix checks hosts and services
    * Replaced d3js, datamaps and topojson with jqvmap.

bloonix-webgui (0.7) released at 2014-11-22

    * Fixed undefined value.
    * Template name is shown if the icon is hovered.
    * Fixed dashlet configure button.
