@@ -1,3 +1,7 @@
+bloonix-webgui (0.19) released at 2014-12-31
+
+    * Company 1 cannot be deleted any more.
+
 bloonix-webgui (0.18) released at 2014-12-23
 
     * Show the company name in the form of the company settings.
